# InfraredBrickTower

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  InfraredBrickTower.sln  LegoInfraredUSBTower.sln  README.md  imgui.ini  lasm_pdf_scraper.py  thing.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
Common/: CMakeLists.txt  Types.h  Utilities.cpp  Utilities.h
ConsoleTester/: CMakeLists.txt  ConsoleTester.cpp  ConsoleTester.vcxproj  ConsoleTester.vcxproj.filters  main.cpp
IBTConsole/: CMakeLists.txt  main.cpp
IBTController/: CMakeLists.txt  ControllerUI.cpp  ControllerUI.h  IBTController.cpp  IBTController.vcxproj  IBTController.vcxproj.filters  imgui.ini  libusb_test.cpp  main.cpp  main_test.cpp
IBTDriverLinux/: CMakeLists.txt  LinuxUsbTowerInterface.h  imgui.ini
IBTDriverPackage/: IBTDriver.inf  IBTDriverPackage.vcxproj  IBTDriverPackage.vcxproj.filters
IBTDriverWin/: CMakeLists.txt  IBTDriverWin.vcxproj  IBTDriverWin.vcxproj.filters  ReadMe.txt  WinUsbTowerInterface.cpp  WinUsbTowerInterface.h  device.h  imgui.ini
IBTWinUSBLogic/: IBTWinUSBLogic.vcxproj  ReadMe.txt  WinUsbTowerInterface.cpp  beep.rcx  device.cpp  device.h
InfraredBrickTower/: CMakeLists.txt  Config.h  HostTowerCommInterface.h  InfraredBrickTower.cpp  InfraredBrickTower.h  InfraredBrickTower.vcxproj  InfraredBrickTower.vcxproj.filters  LASM.cpp  LASM.h  RCXFileParser.cpp  RCXFileParser.h  TowerController.cpp  TowerController.h  USBTowerController.cpp  USBTowerController.h  VLLCommands.cpp  VLLCommands.h  WinUsbTowerInterface.cpp  WinUsbTowerInterface.h  device.cpp  drive_until_button.rcx  example_program.rcx  main.cpp  notes.txt  pch.h
InfraredBrickTower/LegoHeaders/: LEGOUSBTowerioctl.h  LegoVendReq.h  TowerApi.h  pbkexport.h
InfraredBrickTowerDriverPackage/: InfraredBrickTowerDriver.inf  InfraredBrickTowerDriverPackage.vcxproj  InfraredBrickTowerDriverPackage.vcxproj.filters
LegoInfraredUSBTower/: LegoInfraredUSBTower.cpp  LegoInfraredUSBTower.h  LegoInfraredUSBTower.vcxproj  LegoInfraredUSBTower.vcxproj.filters  ReadMe.txt  TowerValues.h  USBTowerController.cpp  USBTowerController.h  device.cpp  device.h  main.cpp
LegoInfraredUSBTower/LegoHeaders/: PbkError.h  VendReq.h  pbktypes.h
LegoTowerDriverPackage/: LegoTowerDriverPackage.vcxproj  LegoTowerDriverPackage.vcxproj.filters  LegoUSBInfraredTowerDriver.inf
PBrickLogic/: CMakeLists.txt  LASM.cpp  LASM.h  PBrick.cpp  PBrick.h  PBrickLogic.cpp  PBrickLogic.filters  PBrickLogic.vcxproj  PBrickLogic.vcxproj.filters  RCXFileParser.cpp  RCXFileParser.h  VLL.cpp  VLL.h  imgui.ini
RCXLogic/: RCXLogic.vcxproj
TestDLL/: Bababooey.cpp  Bababooey.h  TestDLL.vcxproj  TestDLL.vcxproj.filters
TowerLogic/: CMakeLists.txt  HostTowerCommInterface.cpp  HostTowerCommInterface.h  LinuxUSBTowerInterface.cpp  LinuxUSBTowerInterface.h  LinuxUsbTowerInterface.cpp  TowerController.cpp  TowerController.h  TowerLogic.vcxproj  TowerLogic.vcxproj.filters  WinUsbTowerInterface.cpp  WinUsbTowerInterface.h  imgui.ini
VLLController/: Resource.h  VLLController.cpp  VLLController.rc  VLLController.vcxproj  VLLController.vcxproj.filters  imgui.ini
VLLTester/: VLLTester.cpp  VLLTester.vcxproj  VLLTester.vcxproj.filters
lib/imgui/: CMakeLists.txt
